{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 72,
  "lineage": "d69852bc-ecca-944c-17f3-a3e93bb46b36",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_firewall_application_rule_collection",
      "name": "application-rule-collection",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": "Allow",
            "azure_firewall_name": "azure-firewall",
            "id": "/subscriptions/e0b488d0-e8ed-426d-bb22-5dcce490cca9/resourceGroups/demo_terraform-resources/providers/Microsoft.Network/azureFirewalls/azure-firewall/applicationRuleCollections/application-rule-collection",
            "name": "application-rule-collection",
            "priority": 100,
            "resource_group_name": "demo_terraform-resources",
            "rule": [
              {
                "description": "",
                "fqdn_tags": [],
                "name": "application-rule-collection",
                "protocol": [
                  {
                    "port": 80,
                    "type": "Http"
                  }
                ],
                "source_addresses": [
                  "172.31.0.68"
                ],
                "source_ip_groups": [],
                "target_fqdns": [
                  "*"
                ]
              }
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_firewall.azure-firewall",
            "azurerm_public_ip.azure-firewall-PublicIP",
            "azurerm_resource_group.demo-rg",
            "azurerm_subnet.azure-firewall-subnet",
            "azurerm_virtual_network.inspection-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_firewall_nat_rule_collection",
      "name": "allow-inbound-collection",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": "Dnat",
            "azure_firewall_name": "azure-firewall",
            "id": "/subscriptions/e0b488d0-e8ed-426d-bb22-5dcce490cca9/resourceGroups/demo_terraform-resources/providers/Microsoft.Network/azureFirewalls/azure-firewall/natRuleCollections/allow-inbound-collection",
            "name": "allow-inbound-collection",
            "priority": 100,
            "resource_group_name": "demo_terraform-resources",
            "rule": [
              {
                "description": "",
                "destination_addresses": [
                  "52.151.232.26"
                ],
                "destination_ports": [
                  "80"
                ],
                "name": "allow-inbound",
                "protocols": [
                  "TCP",
                  "UDP"
                ],
                "source_addresses": [
                  "*"
                ],
                "source_ip_groups": [],
                "translated_address": "172.31.0.68",
                "translated_port": "80"
              }
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_firewall.azure-firewall",
            "azurerm_public_ip.azure-firewall-PublicIP",
            "azurerm_resource_group.demo-rg",
            "azurerm_subnet.azure-firewall-subnet",
            "azurerm_virtual_network.inspection-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_firewall_network_rule_collection",
      "name": "allow-outbound-collection",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": "Allow",
            "azure_firewall_name": "azure-firewall",
            "id": "/subscriptions/e0b488d0-e8ed-426d-bb22-5dcce490cca9/resourceGroups/demo_terraform-resources/providers/Microsoft.Network/azureFirewalls/azure-firewall/networkRuleCollections/allow-outbound-collection",
            "name": "allow-outbound-collection",
            "priority": 100,
            "resource_group_name": "demo_terraform-resources",
            "rule": [
              {
                "description": "",
                "destination_addresses": [
                  "*"
                ],
                "destination_fqdns": [],
                "destination_ip_groups": [],
                "destination_ports": [
                  "*"
                ],
                "name": "allow-outbound-collection",
                "protocols": [
                  "Any"
                ],
                "source_addresses": [
                  "*"
                ],
                "source_ip_groups": []
              }
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_firewall.azure-firewall",
            "azurerm_public_ip.azure-firewall-PublicIP",
            "azurerm_resource_group.demo-rg",
            "azurerm_subnet.azure-firewall-subnet",
            "azurerm_virtual_network.inspection-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "webserver-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e0b488d0-e8ed-426d-bb22-5dcce490cca9/resourceGroups/demo_terraform-resources/providers/Microsoft.Network/networkInterfaces/webserver-nic",
            "internal_domain_name_suffix": "4xll0ffrg2vungmspuc3ehz2yd.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "vm-ip-config",
                "primary": true,
                "private_ip_address": "172.31.0.68",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/e0b488d0-e8ed-426d-bb22-5dcce490cca9/resourceGroups/demo_terraform-resources/providers/Microsoft.Network/virtualNetworks/inspection-vnet/subnets/workload-subnet"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-22-93-4C",
            "name": "webserver-nic",
            "private_ip_address": "172.31.0.68",
            "private_ip_addresses": [
              "172.31.0.68"
            ],
            "resource_group_name": "demo_terraform-resources",
            "tags": {
              "environment": "Demo"
            },
            "virtual_machine_id": "/subscriptions/e0b488d0-e8ed-426d-bb22-5dcce490cca9/resourceGroups/demo_terraform-resources/providers/Microsoft.Compute/virtualMachines/webserver"
          },
          "dependencies": [
            "azurerm_resource_group.demo-rg",
            "azurerm_subnet.workload-subnet",
            "azurerm_virtual_network.inspection-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "vm1_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e0b488d0-e8ed-426d-bb22-5dcce490cca9/resourceGroups/demo_terraform-resources/providers/Microsoft.Network/networkInterfaces/webserver-nic|/subscriptions/e0b488d0-e8ed-426d-bb22-5dcce490cca9/resourceGroups/demo_terraform-resources/providers/Microsoft.Network/networkSecurityGroups/demo_terraform-sg",
            "network_interface_id": "/subscriptions/e0b488d0-e8ed-426d-bb22-5dcce490cca9/resourceGroups/demo_terraform-resources/providers/Microsoft.Network/networkInterfaces/webserver-nic",
            "network_security_group_id": "/subscriptions/e0b488d0-e8ed-426d-bb22-5dcce490cca9/resourceGroups/demo_terraform-resources/providers/Microsoft.Network/networkSecurityGroups/demo_terraform-sg"
          },
          "dependencies": [
            "azurerm_network_interface.webserver-nic",
            "azurerm_network_security_group.vm-sg",
            "azurerm_resource_group.demo-rg",
            "azurerm_subnet.workload-subnet",
            "azurerm_virtual_network.inspection-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "vm-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e0b488d0-e8ed-426d-bb22-5dcce490cca9/resourceGroups/demo_terraform-resources/providers/Microsoft.Network/networkSecurityGroups/demo_terraform-sg",
            "location": "eastus",
            "name": "demo_terraform-sg",
            "resource_group_name": "demo_terraform-resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "All",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "70.121.85.105/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.demo-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "azure-firewall-PublicIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "Zone-Redundant",
            "id": "/subscriptions/e0b488d0-e8ed-426d-bb22-5dcce490cca9/resourceGroups/demo_terraform-resources/providers/Microsoft.Network/publicIPAddresses/azure-firewall-PublicIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.151.232.26",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "azure-firewall-PublicIP",
            "resource_group_name": "demo_terraform-resources",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.demo-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "route-table-internet-loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/e0b488d0-e8ed-426d-bb22-5dcce490cca9/resourceGroups/demo_terraform-resources/providers/Microsoft.Network/routeTables/route-table-internet-loadbalancer",
            "location": "eastus",
            "name": "route-table-internet-loadbalancer",
            "resource_group_name": "demo_terraform-resources",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "firewall-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "172.31.0.64/27",
                "name": "firewall-loadbalancer",
                "next_hop_in_ip_address": "172.31.0.100",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/e0b488d0-e8ed-426d-bb22-5dcce490cca9/resourceGroups/demo_terraform-resources/providers/Microsoft.Network/virtualNetworks/inspection-vnet/subnets/AzureFirewallSubnet"
            ],
            "tags": {
              "environment": "Demo"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.demo-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "route-table-sanitized-firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/e0b488d0-e8ed-426d-bb22-5dcce490cca9/resourceGroups/demo_terraform-resources/providers/Microsoft.Network/routeTables/route-table-sanitized-firewall",
            "location": "eastus",
            "name": "route-table-sanitized-firewall",
            "resource_group_name": "demo_terraform-resources",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "sanitized-firewall",
                "next_hop_in_ip_address": "172.31.0.132",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/e0b488d0-e8ed-426d-bb22-5dcce490cca9/resourceGroups/demo_terraform-resources/providers/Microsoft.Network/virtualNetworks/inspection-vnet/subnets/sanitized-subnet"
            ],
            "tags": {
              "environment": "Demo"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.demo-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "route-table-workload-loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/e0b488d0-e8ed-426d-bb22-5dcce490cca9/resourceGroups/demo_terraform-resources/providers/Microsoft.Network/routeTables/route-table-workload-loadbalancer",
            "location": "eastus",
            "name": "route-table-workload-loadbalancer",
            "resource_group_name": "demo_terraform-resources",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "route-table-workload-loadbalancer-1",
                "next_hop_in_ip_address": "172.31.0.100",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "172.31.0.128/26",
                "name": "route-table-workload-loadbalancer-2",
                "next_hop_in_ip_address": "172.31.0.100",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/e0b488d0-e8ed-426d-bb22-5dcce490cca9/resourceGroups/demo_terraform-resources/providers/Microsoft.Network/virtualNetworks/inspection-vnet/subnets/workload-subnet"
            ],
            "tags": {
              "environment": "Demo"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.demo-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "azure-firewall-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.31.0.128/26",
            "address_prefixes": [
              "172.31.0.128/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e0b488d0-e8ed-426d-bb22-5dcce490cca9/resourceGroups/demo_terraform-resources/providers/Microsoft.Network/virtualNetworks/inspection-vnet/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "resource_group_name": "demo_terraform-resources",
            "virtual_network_name": "inspection-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.demo-rg",
            "azurerm_virtual_network.inspection-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "inspection-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.31.0.32/28",
            "address_prefixes": [
              "172.31.0.32/28"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e0b488d0-e8ed-426d-bb22-5dcce490cca9/resourceGroups/demo_terraform-resources/providers/Microsoft.Network/virtualNetworks/inspection-vnet/subnets/inspection-subnet",
            "name": "inspection-subnet",
            "resource_group_name": "demo_terraform-resources",
            "virtual_network_name": "inspection-vnet"
          },
          "dependencies": [
            "azurerm_virtual_network.inspection-vnet",
            "azurerm_resource_group.demo-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "loadbalancer-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.31.0.96/27",
            "address_prefixes": [
              "172.31.0.96/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e0b488d0-e8ed-426d-bb22-5dcce490cca9/resourceGroups/demo_terraform-resources/providers/Microsoft.Network/virtualNetworks/inspection-vnet/subnets/loadbalancer-subnet",
            "name": "loadbalancer-subnet",
            "resource_group_name": "demo_terraform-resources",
            "virtual_network_name": "inspection-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.demo-rg",
            "azurerm_virtual_network.inspection-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "management-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.31.0.0/27",
            "address_prefixes": [
              "172.31.0.0/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e0b488d0-e8ed-426d-bb22-5dcce490cca9/resourceGroups/demo_terraform-resources/providers/Microsoft.Network/virtualNetworks/inspection-vnet/subnets/management-subnet",
            "name": "management-subnet",
            "resource_group_name": "demo_terraform-resources",
            "virtual_network_name": "inspection-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.demo-rg",
            "azurerm_virtual_network.inspection-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "sanitized-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.31.0.48/28",
            "address_prefixes": [
              "172.31.0.48/28"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e0b488d0-e8ed-426d-bb22-5dcce490cca9/resourceGroups/demo_terraform-resources/providers/Microsoft.Network/virtualNetworks/inspection-vnet/subnets/sanitized-subnet",
            "name": "sanitized-subnet",
            "resource_group_name": "demo_terraform-resources",
            "virtual_network_name": "inspection-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.demo-rg",
            "azurerm_virtual_network.inspection-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "workload-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.31.0.64/27",
            "address_prefixes": [
              "172.31.0.64/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e0b488d0-e8ed-426d-bb22-5dcce490cca9/resourceGroups/demo_terraform-resources/providers/Microsoft.Network/virtualNetworks/inspection-vnet/subnets/workload-subnet",
            "name": "workload-subnet",
            "resource_group_name": "demo_terraform-resources",
            "virtual_network_name": "inspection-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.demo-rg",
            "azurerm_virtual_network.inspection-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "azure-firewall-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e0b488d0-e8ed-426d-bb22-5dcce490cca9/resourceGroups/demo_terraform-resources/providers/Microsoft.Network/virtualNetworks/inspection-vnet/subnets/AzureFirewallSubnet",
            "route_table_id": "/subscriptions/e0b488d0-e8ed-426d-bb22-5dcce490cca9/resourceGroups/demo_terraform-resources/providers/Microsoft.Network/routeTables/route-table-internet-loadbalancer",
            "subnet_id": "/subscriptions/e0b488d0-e8ed-426d-bb22-5dcce490cca9/resourceGroups/demo_terraform-resources/providers/Microsoft.Network/virtualNetworks/inspection-vnet/subnets/AzureFirewallSubnet"
          },
          "dependencies": [
            "azurerm_resource_group.demo-rg",
            "azurerm_route_table.route-table-internet-loadbalancer",
            "azurerm_subnet.azure-firewall-subnet",
            "azurerm_virtual_network.inspection-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "sanitized-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e0b488d0-e8ed-426d-bb22-5dcce490cca9/resourceGroups/demo_terraform-resources/providers/Microsoft.Network/virtualNetworks/inspection-vnet/subnets/sanitized-subnet",
            "route_table_id": "/subscriptions/e0b488d0-e8ed-426d-bb22-5dcce490cca9/resourceGroups/demo_terraform-resources/providers/Microsoft.Network/routeTables/route-table-sanitized-firewall",
            "subnet_id": "/subscriptions/e0b488d0-e8ed-426d-bb22-5dcce490cca9/resourceGroups/demo_terraform-resources/providers/Microsoft.Network/virtualNetworks/inspection-vnet/subnets/sanitized-subnet"
          },
          "dependencies": [
            "azurerm_virtual_network.inspection-vnet",
            "azurerm_resource_group.demo-rg",
            "azurerm_route_table.route-table-sanitized-firewall",
            "azurerm_subnet.sanitized-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "workload-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e0b488d0-e8ed-426d-bb22-5dcce490cca9/resourceGroups/demo_terraform-resources/providers/Microsoft.Network/virtualNetworks/inspection-vnet/subnets/workload-subnet",
            "route_table_id": "/subscriptions/e0b488d0-e8ed-426d-bb22-5dcce490cca9/resourceGroups/demo_terraform-resources/providers/Microsoft.Network/routeTables/route-table-workload-loadbalancer",
            "subnet_id": "/subscriptions/e0b488d0-e8ed-426d-bb22-5dcce490cca9/resourceGroups/demo_terraform-resources/providers/Microsoft.Network/virtualNetworks/inspection-vnet/subnets/workload-subnet"
          },
          "dependencies": [
            "azurerm_resource_group.demo-rg",
            "azurerm_route_table.route-table-workload-loadbalancer",
            "azurerm_subnet.workload-subnet",
            "azurerm_virtual_network.inspection-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "inspection-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "172.31.0.0/16"
            ],
            "guid": "14bdd6f5-37b1-462b-9992-7d05d21f3cc3",
            "id": "/subscriptions/e0b488d0-e8ed-426d-bb22-5dcce490cca9/resourceGroups/demo_terraform-resources/providers/Microsoft.Network/virtualNetworks/inspection-vnet",
            "location": "eastus",
            "name": "inspection-vnet",
            "resource_group_name": "demo_terraform-resources",
            "subnet": [
              {
                "address_prefix": "172.31.0.0/27",
                "id": "/subscriptions/e0b488d0-e8ed-426d-bb22-5dcce490cca9/resourceGroups/demo_terraform-resources/providers/Microsoft.Network/virtualNetworks/inspection-vnet/subnets/management-subnet",
                "name": "management-subnet"
              },
              {
                "address_prefix": "172.31.0.128/26",
                "id": "/subscriptions/e0b488d0-e8ed-426d-bb22-5dcce490cca9/resourceGroups/demo_terraform-resources/providers/Microsoft.Network/virtualNetworks/inspection-vnet/subnets/AzureFirewallSubnet",
                "name": "AzureFirewallSubnet"
              },
              {
                "address_prefix": "172.31.0.32/28",
                "id": "/subscriptions/e0b488d0-e8ed-426d-bb22-5dcce490cca9/resourceGroups/demo_terraform-resources/providers/Microsoft.Network/virtualNetworks/inspection-vnet/subnets/inspection-subnet",
                "name": "inspection-subnet"
              },
              {
                "address_prefix": "172.31.0.48/28",
                "id": "/subscriptions/e0b488d0-e8ed-426d-bb22-5dcce490cca9/resourceGroups/demo_terraform-resources/providers/Microsoft.Network/virtualNetworks/inspection-vnet/subnets/sanitized-subnet",
                "name": "sanitized-subnet"
              },
              {
                "address_prefix": "172.31.0.64/27",
                "id": "/subscriptions/e0b488d0-e8ed-426d-bb22-5dcce490cca9/resourceGroups/demo_terraform-resources/providers/Microsoft.Network/virtualNetworks/inspection-vnet/subnets/workload-subnet",
                "name": "workload-subnet"
              },
              {
                "address_prefix": "172.31.0.96/27",
                "id": "/subscriptions/e0b488d0-e8ed-426d-bb22-5dcce490cca9/resourceGroups/demo_terraform-resources/providers/Microsoft.Network/virtualNetworks/inspection-vnet/subnets/loadbalancer-subnet",
                "name": "loadbalancer-subnet"
              }
            ],
            "tags": {
              "environment": "Demo"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.demo-rg"
          ]
        }
      ]
    }
  ]
}